daseen/src/index.css
/* ... */
table.dataTable thead>tr>th.dt-orderable-asc span.dt-column-order:before,
table.dataTable thead>tr>th.dt-orderable-asc span.dt-column-order:after,
table.dataTable thead>tr>th.dt-orderable-desc span.dt-column-order:before,
table.dataTable thead>tr>th.dt-orderable-desc span.dt-column-order:after,
table.dataTable thead>tr>th.dt-ordering-asc span.dt-column-order:before,
table.dataTable thead>tr>th.dt-ordering-asc span.dt-column-order:after,
table.dataTable thead>tr>th.dt-ordering-desc span.dt-column-order:before,
table.dataTable thead>tr>th.dt-ordering-desc span.dt-column-order:after,
table.dataTable thead>tr>td.dt-orderable-asc span.dt-column-order:before,
table.dataTable thead>tr>td.dt-orderable-asc span.dt-column-order:after,
table.dataTable thead>tr>td.dt-orderable-desc span.dt-column-order:before,
table.dataTable thead>tr>td.dt-orderable-desc span.dt-column-order:after,
table.dataTable thead>tr>td.dt-ordering-asc span.dt-column-order:before,
table.dataTable thead>tr>td.dt-ordering-asc span.dt-column-order:after,
table.dataTable thead>tr>td.dt-ordering-desc span.dt-column-order:before,
table.dataTable thead>tr>td.dt-ordering-desc span.dt-column-order:after {
  opacity: .5 !important;
}

table.dataTable thead>tr>th.dt-ordering-asc span.dt-column-order:before,
table.dataTable thead>tr>th.dt-ordering-desc span.dt-column-order:after,
table.dataTable thead>tr>td.dt-ordering-asc span.dt-column-order:before,
table.dataTable thead>tr>td.dt-ordering-desc span.dt-column-order:after {
  opacity: 1 !important;
}

.form-control-sm {
  padding: .4rem .5rem !important;
}

.navIconModalToggleWrapper {
  border-radius: 50%;
  border: 1px solid var(--color-darker-gray);
  position: relative;
  width: 45px !important;
  height: 45px !important;
  background-color: transparent !important;
  cursor: 'pointer'
}

.card {
  border: none;
  border-radius: 1.3rem !important;
  background-color: var(--color-body-background) !important;
  color: var(--color-text-lighter) !important;
}

.card-img-top {
  border-top-left-radius: 1.3rem !important;
  border-top-right-radius: 1.3rem !important;
  width: 100% !important;
  object-fit: cover;
  overflow: hidden;
}

.attribute-item-wrapper {
  height: 510px;
  overflow-y: auto;
  overflow-x: hidden;
}

.asset-processing-status {
  border-radius: .5rem;
  border: 1px solid;
  white-space: nowrap !important;
  padding: .15rem .3rem;
  font-size: 7.5pt;
}

.asset-processing-status.warning {
  /* background-color: rgba(248, 255, 173, 0.408); */
  border-color: rgb(255, 234, 0);
}

.asset-processing-status.danger {
  /* background-color: rgba(255, 175, 175, 0.408); */
  border-color: rgba(255, 175, 175)
}

.asset-processing-status.success {
  /* background-color: rgba(167, 255, 189, 0.408); */
  border-color: rgba(167, 255, 189);
}

.asset-processing-status.primary {
  /* background-color: rgba(159, 220, 255, 0.408); */
  border-color: rgba(159, 220, 255);
}

.header-container {
  position: fixed;
  width: 100vw;
  z-index: 999;
  top: -300px !important;
  transition: top 0.5s ease;
}

.header-container.visible {
  top: 0 !important;
}

.border-lighter {
  border: 1px solid var(--color-light-gray) !important;
}

ul.custom-list {
  list-style-type: none;
  padding: 0;
}

ul.custom-list li::before {
  content: '\25CF';
  margin-right: 10px;
  display: inline-block;
  vertical-align: middle;
}

table.table.dataTable>:not(caption)>*>* {
  background-color: transparent !important;
}

#preferencesModal .nav-item.active,
#preferencesModal .nav-item.active .nav-link,
#preferencesModal .nav-item:hover,
#preferencesModal .nav-item:hover .nav-link {
  color: #1e1f21 !important;
  color: var(--color-text) !important;
}

#preferencesModal .nav-item .nav-link {
  color: #5d5e5f;
  color: var(--color-text-lighter);
  padding-bottom: .42rem;
  padding-top: .42rem;
  width: 100%;
}

/* Switch styles */
.switch {
  position: relative;
  display: inline-block;
  width: 34px;
  height: 20px;
}

.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  transition: .4s;
  border-radius: 50px;
}

.slider:before {
  position: absolute;
  content: "";
  height: 12px;
  width: 12px;
  border-radius: 50px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  transition: .4s;
}

input:checked+.slider {
  background-color: var(--color-primary);
}

input:checked+.slider:before {
  transform: translateX(14px);
}


.spinner-border {
  border: var(--bs-spinner-border-width) solid var(--color-text) !important;
  border-right-color: transparent !important
}

.dropdown-menu{
  background-color: var(--dropdown-color) !important;
  color: var(--color-text) !important;
}

::-webkit-scrollbar {
  width: 11px;
}

/* Track */
::-webkit-scrollbar-track {
  background: var(--color-body-background);
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: var(--color-darker-gray);
  border-radius: 1rem;
}

